--- a/core/src/main/res/layout/view_weather_history_list_item.xml
+++ b/core/src/main/res/layout/view_weather_history_list_item.xml
@@ -94,7 +94,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/btnShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
